--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-# Compiled Object files
-*.o
-*.obj
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.a
-*.lib
-
-# Executables
-*.exe
-
-# DUB
+lib
+bin
 .dub
-dub.selections.json
-
-# Code coverage
-*.lst
-
-.out/
+dub.selections.*
